# us-equity-datalake

./: .gitignore  CLAUDE.md  README.md  filtered.csv  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.sh
.claude_prd/: bypass_wrds_conn.md  compatibility_with_query.md
.github/: SECRETS.md
.github/workflows/: daily-update.yml  manual-daily-update.yml  test-daily-update.yml
configs/: approved_mapping.yaml  mapping_suggestions.yaml  storage.yaml
docs/: FTP_TUTORIAL.md  IMPLEMENTATION_SUMMARY.md  README_derived_fundamentals.md  S3_CONFIGURATION.md  TESTING.md  XBRL_TAG_FACTORY.md  daily_updates.md  derived_fundamental_integration.md  derived_fundamentals.md
examples/: databento.py  fundamental_upload.py  symbol_name_change_examples.py
scripts/: benchmark_parallel_filing.py  crsp_figi.py  daily_update.bat  gaap_fields.py  generate_monthly_top3000.py  migrate_symbol_to_cik.py  search_bbby.py  sec_fundamental_delisted.py  trade_calendar.py  xbrl_tag_factory.py
src/collection/: alpaca_ticks.py  crsp_ticks.py  fundamental.py  models.py  ticks.py  wrds_daily.py
src/derived/: metrics.py  ttm.py
src/master/: security_master.py
src/quantdl/: cli.py
src/stock_pool/: history_universe.py  universe.py  universe_manager.py
src/storage/: config.yaml  config_loader.py  data_collectors.py  data_publishers.py  s3_client.py  upload_app.py  validation.py
src/utils/: calendar.py  logger.py  mapping.py
tests/: README.md  __init__.py  conftest.py  test_wrds_daily.py
tests/integration/: __init__.py  test_data_workflow.py  test_s3_storage.py  (+1 more)
(+82 files in other folders)
