[project]
name = "us-equity-datalake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.14",
    "dotenv>=0.9.9",
    "polars>=1.36.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]
