[project]
name = "quantdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arelle-release>=2.36.0",
    "boto3>=1.42.14",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "wrds>=3.4.0",
    "yfinance>=0.2.66",
]

[project.scripts]
quantdl-storage = "quantdl.storage.cli:main"
quantdl-update = "quantdl.update.cli:main"
quantdl-consolidate = "quantdl.consolidate.cli:main"
quantdl-export-security-master = "quantdl.master.cli:main"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
]
